--- a/index.html
+++ b/index.html
@@ -4,26 +4,39 @@
 		<title>Favicon</title>
 		<link rel="shortcut icon" media="screen">
 		<link rel="stylesheet" href="/css/normalize.css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="/css/skeleton.css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="/css/app.css" media="screen" charset="utf-8">
 		<script src="/js/jquery.js"></script>
+		<script src="/js/ace.js"></script>
 		<script src="/js/app.js"></script>
 	</head>
 	<body>
-		<textarea id="coder" name="code" rows="8" cols="40">
-var w = this.width
-var h = this.height
+		<div class="container">
+			<div class="row">
+				<div id="gallery" class="twelve columns"></div>
+			</div>
+			<div class="row">
+				<label for="background">background color:</label>
+				<input type="text" name="background" value="#efefef">
+				<div id="code" class="editor u-full-width">var context = this
+var w = context.width
+var h = context.height
 var centerX = w / 2
 var centerY = h / 2
 var pad = Math.round(w * 0.10)
 
-this.beginPath()
-this.arc(centerX, centerY, (w-pad*2)/2, 0, 4/3 * Math.PI, false);
-this.fillStyle = '#59f'
-this.fill()
-		</textarea>
-		<br>
-		<button id="runner" name="run">run</button>
-		<button id="saver" name="save">save</button>
-		<br>
-		<div id="gallery"></div>
+function arc(scale, color) {
+	context.beginPath()
+	context.arc(centerX, centerY, (w-pad*2)/2, 0, scale * Math.PI, false);
+	context.fillStyle = color
+	context.fill()
+	context.closePath()
+}
+
+arc(4/3, '#59f')</div>
+				<button id="runner" name="run">run</button>
+				<button id="saver" name="save">save</button>
+			</div>
+		</div>
 	</body>
 </html>
