favicons for hackers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="container">
 					<h1 v-style="color:foreground">
 						FaviScript
-						<small>by Noah H. Smith</small>
+						<small>favicons for hackers</small>
 					</h1>
 					<favi-gallery id="gallery" class="twelve columns" v-ref="gallery" v-with="code:code, sizes:sizes"></favi-gallery>
 				</div>
