--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<title>FaviScript</title>
 		<link rel="shortcut icon" media="screen">
